--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -14,7 +14,7 @@
             <source>KU get video from Video23</source>
         </trans-unit>
         <trans-unit id="video23_desc">
-            <source>Fetch video by its ID or title</source>
+            <source>Fetch video by ID or title</source>
         </trans-unit>
         <trans-unit id="error">
             <source>Error fetching video</source>
