--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -5,16 +5,16 @@
         </header>
         <body>
         <trans-unit id="webservice">
-            <source>Video 23 api</source>
+            <source>Video23 domain to fetch videos from (no trailing slash)</source>
         </trans-unit>
         <trans-unit id="itemsPerPage">
             <source>List items per page</source>
         </trans-unit>
         <trans-unit id="video23_title">
-            <source>KU get video from Video23</source>
+            <source>KU get video from video portal</source>
         </trans-unit>
         <trans-unit id="video23_desc">
-            <source>Fetch video by ID or title</source>
+            <source>Fetch video by ID, title or content text</source>
         </trans-unit>
         <trans-unit id="error">
             <source>Error fetching video</source>
