--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="messages" date="2023-01-15UTC07:12:052">
+    <file source-language="en" datatype="plaintext" original="ku_video23/Resources/Private/Language/locallang.xlf" date="2020-08-10T10:26:01Z">
         <header>
         </header>
         <body>
