--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -4,7 +4,9 @@
         <header>
         </header>
         <body>
-
+        <trans-unit id="no_video">
+            <source>The video cannot be fetched. Try again later.</source>
+        </trans-unit>
         </body>
     </file>
 </xliff>
